fix : minor fix on z-index

--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -62,7 +62,7 @@
       transform: translate(-50%, -50%);
       text-align: center;
       color: #fff;
-      z-index: 1000;
+      z-index: 500;
 
       h1 {
         margin-bottom: 16px;
